--- a/x86interpreter.vcxproj
+++ b/x86interpreter.vcxproj
@@ -13,6 +13,9 @@
   <ItemGroup>
     <ClCompile Include="src\image.cpp" />
     <ClCompile Include="src\interpreter.cpp" />
+    <ClCompile Include="src\interpreter_add.cpp" />
+    <ClCompile Include="src\interpreter_opcode_dispatch_table.cpp" />
+    <ClCompile Include="src\interpreter_prefix_table.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\options.cpp" />
     <ClCompile Include="src\pe.cpp" />
@@ -24,6 +27,7 @@
     <ClInclude Include="3p\include\semaphore.h" />
     <ClInclude Include="include\image.h" />
     <ClInclude Include="include\interpreter.h" />
+    <ClInclude Include="include\interpreter_util.h" />
     <ClInclude Include="include\pe.h" />
     <ClInclude Include="include\runtime.h" />
   </ItemGroup>
