added support for all variations of push instruction

--- a/x86interpreter.vcxproj
+++ b/x86interpreter.vcxproj
@@ -14,8 +14,8 @@
     <ClCompile Include="src\image.cpp" />
     <ClCompile Include="src\interpreter.cpp" />
     <ClCompile Include="src\interpreter_add.cpp" />
+    <ClCompile Include="src\interpreter_call_push.cpp" />
     <ClCompile Include="src\interpreter_opcode_dispatch_table.cpp" />
-    <ClCompile Include="src\interpreter_prefix_table.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\options.cpp" />
     <ClCompile Include="src\pe.cpp" />
