--- a/x86interpreter.vcxproj
+++ b/x86interpreter.vcxproj
@@ -14,7 +14,8 @@
     <ClCompile Include="src\image.cpp" />
     <ClCompile Include="src\interpreter.cpp" />
     <ClCompile Include="src\interpreter_add_sub.cpp" />
-    <ClCompile Include="src\interpreter_call_push.cpp" />
+    <ClCompile Include="src\interpreter_call_push_pop.cpp" />
+    <ClCompile Include="src\interpreter_mov.cpp" />
     <ClCompile Include="src\interpreter_opcode_dispatch_table.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\options.cpp" />
