--- a/x86interpreter.vcxproj
+++ b/x86interpreter.vcxproj
@@ -28,7 +28,9 @@
     <ClInclude Include="3p\include\semaphore.h" />
     <ClInclude Include="include\image.h" />
     <ClInclude Include="include\interpreter.h" />
+    <ClInclude Include="include\interpreter_macro_expansion.h" />
     <ClInclude Include="include\interpreter_util.h" />
+    <ClInclude Include="include\interpreter_util_addsubcmp.h" />
     <ClInclude Include="include\pe.h" />
     <ClInclude Include="include\runtime.h" />
   </ItemGroup>
@@ -73,6 +75,7 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>$(ProjectDir)\include\;$(ProjectDir)\3p\include\</AdditionalIncludeDirectories>
+      <PreprocessToFile>false</PreprocessToFile>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
