--- a/x86interpreter.vcxproj.filters
+++ b/x86interpreter.vcxproj.filters
@@ -70,5 +70,11 @@
     <ClInclude Include="include\interpreter_util.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\interpreter_util_addsubcmp.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\interpreter_macro_expansion.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
