renamed _WIN32 to _MSC_VER, fixed a bug in file type detection logic, changed cls behaviour on win32

--- a/x86interpreter.vcxproj
+++ b/x86interpreter.vcxproj
@@ -12,6 +12,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="3p\src\XGetopt.c" />
+    <ClCompile Include="src\cls.c" />
     <ClCompile Include="src\diagnostics.c" />
     <ClCompile Include="src\elf.c" />
     <ClCompile Include="src\image.c" />
